--- a/BlogProject/Views/BlogPosts/Create.cshtml
+++ b/BlogProject/Views/BlogPosts/Create.cshtml
@@ -4,18 +4,36 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<section class="global-page-header">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="block">
+                    <h2>Blog with right sidebar</h2>
+                    <ol class="breadcrumb">
+                        <li>
+                            <a href="index.html">
+                                <i class="ion-ios-home"></i>
+                                Home
+                            </a>
+                        </li>
+                        <li class="active">Blog</li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>BlogPost</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.title, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.title, "Title: ", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.title, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.title, "", new { @class = "text-danger" })
@@ -23,9 +41,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.body, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.body, "Body: ", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.body, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.body, new { htmlAttributes = new { @class = "form-control", @rows = 40, @cols = 100 } })
                 @Html.ValidationMessageFor(model => model.body, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -39,7 +57,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.published, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.published, "Publish: ", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
                     @Html.EditorFor(model => model.published)
