--- a/BlogProject/Views/BlogPosts/Details.cshtml
+++ b/BlogProject/Views/BlogPosts/Details.cshtml
@@ -4,14 +4,65 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<section class="global-page-header">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="block">
+                    <h2>@Html.DisplayFor(model => model.title)</h2>
+                    <div class="portfolio-meta">
+                        <span>@Html.DisplayFor(model => model.created)</span>|
+                        <span> Category: typography</span>|
+                        <span> Tags: <a href="">business</a>,<a href="">people</a></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
-<div>
+<section class="single-post">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="post-img">
+                    <img class="img-responsive" alt="" src="@Html.DisplayFor(model => model.mediaURL)">
+                </div>
+                <div class="post-content">
+                    @Html.DisplayFor(model => model.body)
+                </div>
+                <div class="post-comment">
+                    <h3>Leave a Reply</h3>
+                    <form role="form" class="form-horizontal">
+                        <div class="form-group">
+                            <div class="col-lg-6">
+                                <input type="text" class="col-lg-12 form-control" placeholder="Name">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-lg-12">
+                                <textarea class=" form-control" rows="8" placeholder="Message"></textarea>
+                            </div>
+                        </div>
+                        <p>
+                        </p>
+                        <p>
+                            <button class="btn btn-send" type="submit">Comment</button>
+                        </p>
+
+                        <p></p>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+@*<div>
     <h4>BlogPost</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.created)
+            
         </dt>
 
         <dd>
@@ -67,7 +118,7 @@
         </dd>
 
     </dl>
-</div>
+</div>*@
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
     @Html.ActionLink("Back to List", "Index")
