--- a/BlogProject/Views/BlogPosts/Index.cshtml
+++ b/BlogProject/Views/BlogPosts/Index.cshtml
@@ -125,28 +125,16 @@
                 
                 <div class="recent-post widget">
                     <h3>Recent Posts</h3>
-
+                    @{var mostRecent = Model.OrderByDescending(p => p.created);}
                     <ul>
+                    @foreach(var item in mostRecent)
+                    {
                         <li>
-                            <a href="#">Corporate meeting turns into a photoshooting.</a><br>
-                            <time>16 May, 2015</time>
+                            @Html.ActionLink(item.title, "Details", new { slug = item.slug })
+                            <br />
+                            @Html.DisplayFor(modelItem => item.created)
                         </li>
-                        <li>
-                            <a href="#">Statistics,analysis. The key to succes.</a><br>
-                            <time>15 May, 2015</time>
-                        </li>
-                        <li>
-                            <a href="#">Blog post without image, only text.</a><br>
-                            <time>14 May, 2015</time>
-                        </li>
-                        <li>
-                            <a href="#">Blog post with audio player. Share your creations.</a><br>
-                            <time>14 May, 2015</time>
-                        </li>
-                        <li>
-                            <a href="#">Blog post with classic Youtbube player.</a><br>
-                            <time>12 May, 2015</time>
-                        </li>
+                    }
                     </ul>
 
                 </div>
