First Commit Day 3 Week 2

--- a/BlogProject/Views/Account/Login.cshtml
+++ b/BlogProject/Views/Account/Login.cshtml
@@ -4,7 +4,18 @@
     ViewBag.Title = "Log in";
 }
 
-<h2>@ViewBag.Title.</h2>
+<section class="global-page-header">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="block">
+                    <h2>Log In</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
