--- a/BlogProject/Views/BlogPosts/Create.cshtml
+++ b/BlogProject/Views/BlogPosts/Create.cshtml
@@ -9,16 +9,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="block">
-                    <h2>Blog with right sidebar</h2>
-                    <ol class="breadcrumb">
-                        <li>
-                            <a href="index.html">
-                                <i class="ion-ios-home"></i>
-                                Home
-                            </a>
-                        </li>
-                        <li class="active">Blog</li>
-                    </ol>
+                    <h2>Create Your Post!</h2>
                 </div>
             </div>
         </div>
@@ -43,7 +34,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.body, "Body: ", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.body, new { htmlAttributes = new { @class = "form-control", @rows = 40, @cols = 100 } })
+                @Html.TextAreaFor(model => model.body, new { htmlAttributes = new { @class = "form-control"} })
                 @Html.ValidationMessageFor(model => model.body, "", new { @class = "text-danger" })
             </div>
         </div>
