--- a/BlogProject/Views/Shared/_Layout.cshtml
+++ b/BlogProject/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Create New", "Create", "BlogPosts")</li>
+                    <li>@Html.ActionLink("Blogs", "Index", "BlogPosts")</li>
                 </ul>
             </div>
         </div>
