--- a/BlogProject/Views/Account/ResetPassword.cshtml
+++ b/BlogProject/Views/Account/ResetPassword.cshtml
@@ -3,12 +3,21 @@
     ViewBag.Title = "Reset password";
 }
 
-<h2>@ViewBag.Title.</h2>
+<section class="global-page-header">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="block">
+                    <h2>Reset password?</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Reset your password.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Code)
