--- a/BlogProject/Views/BlogPosts/Delete.cshtml
+++ b/BlogProject/Views/BlogPosts/Delete.cshtml
@@ -4,77 +4,45 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<section class="global-page-header">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="block">
+                    <h2>Are you sure you want to delete?</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <div>
-    <h4>BlogPost</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.created)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.created)
-        </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.updated)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.updated)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.title)
+            This Post:
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.title)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.slug)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.slug)
-        </dd>
-
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.body)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.body)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.mediaURL)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.mediaURL)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.published)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.published)
-        </dd>
+        </dd>*@
 
     </dl>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+    <div class="form-actions no-color blog-content">
+        <input type="submit" value="Delete" class="btn btn-default btn-details" />
+        <a class="btn btn-dafault btn-details" href="@Url.Action("Index", "BlogPosts")">Go Back</a>
+    </div>
     }
 </div>
