--- a/BlogProject/Views/Home/Contact.cshtml
+++ b/BlogProject/Views/Home/Contact.cshtml
@@ -1,9 +1,17 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
+<section class="global-page-header">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="block">
+                    <h2>Contact Me!</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <address>
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
