--- a/BlogProject/Views/Shared/_Layout.cshtml
+++ b/BlogProject/Views/Shared/_Layout.cshtml
@@ -14,18 +14,18 @@
     @Styles.Render("~/plugins/owl-carousel/owl.theme.css")
     @Styles.Render("~/plugins/facncybox/jquery.fancybox.css")
     @Styles.Render("~/css/style.css")
-
+    @Styles.Render("~/Content/Custom.css")
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top animated-header" id="top-bar">
         <div class="container">
-            <div class="navbar-header">
+            <div class="navbar-header main-menu">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Johns Blog of Wonder", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Johns Blog of Wonder", "Index", "Home")
             </div>
             <div class="navbar-collapse collapse main-menu">
                 @Html.Partial("_LoginPartial")
