Final Commit Week 2 Day 3

--- a/BlogProject/Views/Shared/_Layout.cshtml
+++ b/BlogProject/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     @Styles.Render("~/plugins/facncybox/jquery.fancybox.css")
     @Styles.Render("~/css/style.css")
     @Styles.Render("~/Content/Custom.css")
+    @Styles.Render("http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote.css")
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top animated-header" id="top-bar">
@@ -57,6 +58,7 @@
     @Scripts.Render("~/plugins/slider/slider.js")
     @Scripts.Render("~/plugins/facncybox/jquery.fancybox.js")
     @Scripts.Render("~/js/main.js")
+    @Scripts.Render("http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote.js")
     @RenderSection("scripts", required: false)
 </body>
 </html>
