--- a/BlogProject/Views/BlogPosts/Create.cshtml
+++ b/BlogProject/Views/BlogPosts/Create.cshtml
@@ -34,7 +34,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.body, "Body: ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.TextAreaFor(model => model.body, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.TextAreaFor(model => model.body, new { id = "summernote", name = "editordata", htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.body, "", new { @class = "text-danger" })
         </div>
     </div>
