Another been Awhile

--- a/BlogProject/Views/BlogPosts/Details.cshtml
+++ b/BlogProject/Views/BlogPosts/Details.cshtml
@@ -12,7 +12,7 @@
                     <h2>@Html.DisplayFor(model => model.title)</h2>
                     <div class="portfolio-meta">
                         <span>@Html.DisplayFor(model => model.created)</span>|
-                        <span> Category: @Html.DisplayFor(model => model.catagory)</span>
+                        <span> Category: @Html.DisplayFor(model => model.category.categoryName)</span>
                     </div>
                 </div>
             </div>
