--- a/BlogProject/Views/BlogPosts/Create.cshtml
+++ b/BlogProject/Views/BlogPosts/Create.cshtml
@@ -17,7 +17,7 @@
 </section>
 
 <div class="container">
-    @using (Html.BeginForm())
+    @using (Html.BeginForm("Create", "BlogPosts", FormMethod.Post, new { enctype = "Multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
 
@@ -41,10 +41,9 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.mediaURL, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.mediaURL, "Thumbnail", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.mediaURL, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.mediaURL, "", new { @class = "text-danger" })
+                    <input name="image" type="file" class="form-control" id="fileUpload" />
                 </div>
             </div>
 
