--- a/BlogProject/Views/BlogPosts/Index.cshtml
+++ b/BlogProject/Views/BlogPosts/Index.cshtml
@@ -27,11 +27,11 @@
                         <td>
                             <article class="wow fadeInDown" data-wow-delay=".3s" data-wow-duration="500ms">
                                 <div class="blog-post-image">
-                                    <a href="@Url.Action("Details", "BlogPosts", new { slug = item.slug })"><img class="img-responsive" src="~/images/blog/post-1.jpg" alt="" /></a>
+                                    <a href="@Url.Action("Details", "BlogPosts", new { slug = item.slug })"><img class="img-responsive" src="@item.mediaURL" alt="" /></a>
                                 </div>
                                 <div class="blog-content">
                                     <h2 class="blogpost-title">
-                                        <a href="post-fullwidth.html">@Html.DisplayFor(modelItem => item.title)</a>
+                                        <a href="@Url.Action("Details", "BlogPosts", new { slug = item.slug })">@Html.DisplayFor(modelItem => item.title)</a>
                                     </h2>
                                     <div class="blog-meta">
                                         <span>@Html.DisplayFor(modelItem => item.created)</span>
@@ -76,6 +76,12 @@
                     @if (User.IsInRole("Admin"))
                     {
                         <a class="btn btn-dafault btn-details" href="@Url.Action("Create", "BlogPosts")">Create Post</a>
+                    }
+                </div>
+                <div class="blog-content">
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <a class="btn btn-dafault btn-details" href="@Url.Action("Index", "Categories")">Mess With Categories</a>
                     }
                 </div>
             </div>
