--- a/BlogProject/Views/BlogPosts/Details.cshtml
+++ b/BlogProject/Views/BlogPosts/Details.cshtml
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="block">
-                    <h2>@Html.DisplayFor(model => model.title)</h2>
+                    <h2 class="abstractOverflow">@Html.DisplayFor(model => model.title)</h2>
                     <div class="portfolio-meta">
                         <span>@Html.DisplayFor(model => model.created)</span>|
                         <span> Category: @Html.DisplayFor(model => model.category.categoryName)</span>|
