Start of Day 5 Week 2 Post Fix

--- a/BlogProject/Views/BlogPosts/Index.cshtml
+++ b/BlogProject/Views/BlogPosts/Index.cshtml
@@ -76,19 +76,19 @@
                     <h3 class="widget-head">Categories</h3>
                     <ul>
                         <li>
-                            <a href="@Url.Action("Index", new { sortCat = "IT", currentFilter = ViewBag.CurrentFilter })">IT</a>
+                            <a href="@Url.Action("Index", new { sortCat = "IT", currentFilter = ViewBag.CurrentFilter = "" })">IT</a>
                         </li>
                         <li>
-                            <a href="@Url.Action("Index", new { sortCat = "Gaming", currentFilter = ViewBag.CurrentFilter })">Gaming</a>
+                            <a href="@Url.Action("Index", new { sortCat = "Gaming", currentFilter = ViewBag.CurrentFilter = "" })">Gaming</a>
                         </li>
                         <li>
-                            <a href="@Url.Action("Index", new { sortCat = "VR/AR", currentFilter = ViewBag.CurrentFilter })">VR/AR</a>
+                            <a href="@Url.Action("Index", new { sortCat = "VR/AR", currentFilter = ViewBag.CurrentFilter = "" })">VR/AR</a>
                         </li>
                         <li>
-                            <a href="@Url.Action("Index", new { sortCat = "Learning", currentFilter = ViewBag.CurrentFilter })">Learning</a>
+                            <a href="@Url.Action("Index", new { sortCat = "Learning", currentFilter = ViewBag.CurrentFilter = "" })">Learning</a>
                         </li>
                         <li>
-                            <a href="@Url.Action("Index", new { sortCat = "Random", currentFilter = ViewBag.CurrentFilter })">Random</a>
+                            <a href="@Url.Action("Index", new { sortCat = "Random", currentFilter = ViewBag.CurrentFilter = "" })">Random</a>
                         </li>
                     </ul>
                     <div class="blog-content">
